@@ -8,6 +8,10 @@ mountall (2.37) UNRELEASED; urgency=low
   * Replace build flag handling in debian/rules with debhelper compat 9 and
     dpkg-buildflags.
 
+  [ Raphaël Pinson ]
+  * Honor nobootwait option for /var/* and /usr/* remote filesystems.
+    LP: #654545
+
  -- Steve Langasek <vorlon@debian.org>  Fri, 18 May 2012 22:38:55 -0700
 
 mountall (2.36) precise; urgency=low
